# barium

./: Cargo.toml  README.md
examples/: smile.rs  spiral.rs
src/: canvas.rs  color.rs  glam_ext.rs  lib.rs  main.rs  path_builder.rs  renderer.rs  transform.rs
src/renderers/: mod.rs  obj_renderer.rs  skia_renderer.rs  speedy2d_renderer.rs  svg_renderer.rs
