[package]
name = "denim"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = "0.20.1"
image = { version = "0.23.14", optional = true}
tiny-skia = { version = "0.6.1", optional = true}


[features]
default = ["tiny_skia_renderer", "svg_renderer"]
tiny_skia_renderer = ["image", "tiny-skia"]
svg_renderer = []
