[package]
name = "denim"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = "0.20.1"
tiny-skia = { version = "0.6.1", optional = true}

# We remove rayon for portability.
[dependencies.image]
version = "0.23.14"
default-features = false
optional = true
features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"]

[features]
default = ["tiny_skia_renderer", "svg_renderer"]
tiny_skia_renderer = ["image", "tiny-skia"]
svg_renderer = []
