[package]
name = "barium"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = "0.20.1"
tiny-skia = { version = "0.6.1", optional = true }

# Keep everything but rayon for portability and gif because it isn't useful.
[dependencies.image]
version = "0.24.7"
default-features = false
optional = true
features = [
    "jpeg",
    "ico",
    "png",
    "pnm",
    "tga",
    "tiff",
    "webp",
    "bmp",
    "hdr",
    "dxt",
    "dds",
    "farbfeld",
]

[dev-dependencies]
anyhow = "1.0.75"

[features]
default = ["tiny_skia_renderer", "svg_renderer"]
tiny_skia_renderer = ["image", "tiny-skia"]
svg_renderer = []
